add metadata service